--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.18.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
-    "vuetify": "^1.3.0"
+    "vuetify": "^1.3.0",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^5.4.1",
